improvement: styling alignment fixes in desktop resolutions

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,7 +25,7 @@ body {
   background-image: url('../assets/background.svg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-x: 8rem;
+  background-position-x: 6rem;
   top: 0;
   bottom: 0;
   left: 0;
@@ -62,29 +62,34 @@ body {
 
   .main-content {
     padding-left: 3rem;
-    display: block;
+    padding-top: 5vh;
     margin: auto 0;
 
     h1 {
-      font-size: 7rem;
+      font-size: 8vw;
       letter-spacing: 1.5rem;
       font-family: BebasNeue, Lato, Geneva, Tahoma, Verdana, sans-serif;
       margin: 0;
-      margin-top: 8rem;
       line-height: 1.1;
     }
 
     h3 {
       font-variant: all-petite-caps;
       font-weight: normal;
-      font-size: 2rem;
+      font-size: 2.2vw;
       margin-top: 0;
       letter-spacing: 0.5rem;
+
+      span {
+        font-size: 2.75vw;
+      }
     }
 
     p {
       max-width: 75%;
       line-height: 1.5;
+      margin: 0;
+      font-size: 1.25vw;
     }
   }
 }
